# my_slaeee

./: CMakeLists.txt  README.md  csvreader.py
1 lab/: CMakeLists.txt  CMakeLists.txt.txt  alltest.cpp  src.cpp  srcfunc.hpp
DZ4/: CMakeLists.txt  Iterationes.cpp  IterationsGraph456.py  TImeGraph123.py  Timespeed.cpp
DZ_3/: CMakeLists.txt
DZ_3/src/: CMakeLists.txt
DZ_3/src/slo_oe/: Househo_older.cpp
DZ_3/tests/: Househo_older_test.cpp
docs/: functions.md  structs.md
src/: CMakeLists.txt  csr-matrix.h  vector-operations.h
src/slo_oe/: DenseCSR.cpp  DenseCSR.hpp  Househo_older.cpp  Househo_older.hpp  SIMs.cpp  SIMs.hpp
test/: CMakeLists.txt  test-csr-iter-time.cpp
tests/: CMakeLists.txt  Househo_older_test.cpp
timestamps-iter-convergence-compare/: data.csv  processing.py
